--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,71 +1,97 @@
 {
-  "name": "factorio-mod-manager",
+  "name": "seo-analyzer-frontend",
   "version": "1.0.0",
-  "description": "A comprehensive tool for managing Factorio mods with automation capabilities",
+  "description": "SEO Analyzer Desktop Application - Frontend",
+  "author": "SEO Analyzer Team",
+  "license": "MIT",
+  "private": true,
   "main": "electron/main.js",
+  "homepage": "./",
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
-    "electron:start": "electron .",
-    "electron:build": "electron-builder",
-    "electron:package": "npm run build && npm run electron:build",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "lint": "eslint src --ext .js,.jsx",
-    "lint:fix": "eslint src --ext .js,.jsx --fix"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "electron:dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:build": "npm run build && electron-builder build --publish never",
+    "electron:package:win": "npm run build && electron-builder build --win --publish never",
+    "electron:package:mac": "npm run build && electron-builder build --mac --publish never",
+    "electron:package:linux": "npm run build && electron-builder build --linux --publish never"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "zustand": "^4.4.1",
-    "react-icons": "^4.11.0",
-    "react-toastify": "^9.1.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-modal": "^3.16.1"
+    "electron-is-dev": "^2.0.0",
+    "electron-store": "^8.1.0",
+    "formik": "^2.4.2",
+    "i18next": "^23.2.3",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "sass": "^1.63.6",
+    "web-vitals": "^3.3.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.4",
-    "autoprefixer": "^10.4.15",
-    "electron": "^26.1.0",
-    "electron-builder": "^24.6.4",
-    "eslint": "^8.49.0",
-    "eslint-plugin-react": "^7.33.2",
+    "concurrently": "^8.2.0",
+    "cross-env": "^7.0.3",
+    "electron": "^25.2.0",
+    "electron-builder": "^24.4.0",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.4"
+    "prettier": "^2.8.8",
+    "wait-on": "^7.0.1"
   },
   "build": {
-    "appId": "com.factoriomodmanager.app",
-    "productName": "Factorio Mod Manager",
+    "appId": "com.seoanalyzer.app",
+    "productName": "SEO Analyzer",
     "files": [
-      "dist/**/*",
-      "electron/**/*"
+      "build/**/*",
+      "electron/**/*",
+      "node_modules/**/*"
     ],
     "directories": {
-      "buildResources": "resources/assets",
-      "output": "dist_electron"
-    },
-    "win": {
-      "target": [
-        "nsis"
-      ]
+      "buildResources": "assets"
     },
     "mac": {
-      "target": [
-        "dmg"
-      ]
+      "category": "public.app-category.business",
+      "icon": "assets/icon.icns"
+    },
+    "win": {
+      "icon": "assets/icon.ico"
     },
     "linux": {
+      "icon": "assets/icon.png",
+      "category": "Office",
       "target": [
-        "AppImage"
+        "AppImage",
+        "deb"
       ]
     }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
