--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,15 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
     "web-vitals": "^3.3.2",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "redux": "^4.2.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "react-redux": "^8.1.2",
+    "redux-persist": "^6.0.0",
+    "@mui/material": "^5.15.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
