--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,11 @@
     "electron:package:linux": "npm run build && electron-builder build --linux --publish never"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -35,20 +40,15 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.63.6",
     "web-vitals": "^3.3.2",
-    "yup": "^1.2.0",
-    "redux": "^4.2.1",
-    "@reduxjs/toolkit": "^1.9.5",
-    "react-redux": "^8.1.2",
-    "redux-persist": "^6.0.0",
-    "@mui/material": "^5.15.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.0"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
