--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "modhub-central",
   "version": "0.1.0",
-  "description": "ModHub Central - Hub Centralis\u00e9 de Gestion de Mods PC",
+  "description": "ModHub Central - Hub Centralisé de Gestion de Mods PC",
   "author": "ModHub Central Team",
   "license": "MIT",
   "private": true,
@@ -24,6 +24,7 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
