--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
     "electron": "^25.2.0",
