--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "main": "electron/main.js",
   "homepage": "./",
+  "proxy": "http://localhost:8668",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
