--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 graypy==2.1.0
-# PyGPUtil==0.5.0
+
 gputil==1.4.0
 fastapi==0.110.0
 uvicorn==0.30.0
@@ -18,3 +18,11 @@ SQLAlchemy==2.0.25
 aiofiles==23.2.1
 websockets==12.0
 sentry-sdk[fastapi]==2.1.1
+
+aiosqlite==0.19.0
+sqlalchemy[asyncio]
+
+
+aiomysql==0.2.0  
+asyncpg==0.29.0  
+alembic==1.13.1  
